--- a/hotel_managemet_client/package.json
+++ b/hotel_managemet_client/package.json
@@ -41,6 +41,9 @@
     ]
   },
   "devDependencies": {
-    "prop-types": "^15.7.2"
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.36",
+    "prop-types": "^15.7.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
   }
 }
