--- a/hotel_managemet_client/package.json
+++ b/hotel_managemet_client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-photoswipe-gallery": "^1.3.6",
     "react-scripts": "4.0.3",
+    "react-social-icons": "^5.5.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
