--- a/hotel_managemet_client/package.json
+++ b/hotel_managemet_client/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-photoswipe-gallery": "^1.3.6",
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.5.1",
